emqx/emqx-dashboard.yaml

apiVersion: v1
kind: Service
metadata:
  name: emqx-dashboard
  namespace: mqtt
  labels:
    app: emqx
spec:
  type: NodePort
  selector:
    app: emqx
  ports:
    - name: dashboard
      port: 18083
      targetPort: 18083
      nodePort: 32083
