emqx/emqx-headless.yaml

apiVersion: v1
kind: Service
metadata:
  name: emqx-headless
  namespace: mqtt
  labels:
    app: emqx
spec:
  clusterIP: None
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
    - name: dashboard
      port: 18083
      targetPort: 18083
