emqx/emqx-listener.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx-listener
  namespace: mqtt
  labels:
    app: emqx
spec:
  type: NodePort
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      nodePort: 31883
    - name: mqtts
      port: 8883
      targetPort: 8883
      nodePort: 31884
    - name: ws
      port: 8083
      targetPort: 8083
      nodePort: 31885
    - name: wss
      port: 8084
      targetPort: 8084
      nodePort: 31886
