emqx/allow-coredns-tcp53.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tcp-dns-to-coredns
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
    from:
    - namespaceSelector: {}
  policyTypes:
  - Ingress
